Fix image stretch issue

--- a/resources/assets/admin/styles/_card.scss
+++ b/resources/assets/admin/styles/_card.scss
@@ -46,9 +46,6 @@
         .ff_card_text{
             word-break: break-word;
         }
-        img{
-            height: 140px;
-        }
     }
     &_img {
         img {
